# vizzor

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  commitlint.config.js  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  tsconfig.json  tsup.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/workflows/: api-health.yml  ci.yml  claude-review.yml  docker.yml  release.yml  security-audit.yml  security.yml
ml-sidecar/: Dockerfile  pyproject.toml
ml-sidecar/src/: server.py
ml-sidecar/src/inference/: predict.py
ml-sidecar/src/models/: anomaly_detector.py  blockchain_cycle_analyzer.py  divergence_detector.py  intent_classifier.py  lstm_predictor.py  narrative_detector.py  portfolio_optimizer.py  project_risk_scorer.py  pump_detector.py  regime_detector.py  rug_detector.py  sentiment_analyzer.py  signal_classifier.py  strategy_bandit.py  ta_interpreter.py  trend_scorer.py  wallet_classifier.py
ml-sidecar/src/training/: data_loader.py  pipeline.py  train_classifier.py  train_lstm.py  train_narrative.py  train_pump.py  train_regime.py  train_rug.py  train_sentiment.py  train_trend.py
n8n/workflows/: 01-data-collection.json  02-alert-pipeline.json  03-ml-retraining.json  04-agent-monitor.json  05-daily-report.json  06-anomaly-analysis.json  07-narrative-generator.json  (+7 more)
src/: index.ts
web/: Dockerfile  package.json
(+345 files in other folders)
