[project]
name = "vizzor-ml-sidecar"
version = "0.11.0"
description = "ML sidecar for Vizzor — LSTM, RF, Isolation Forest, Rug Detection, Wallet Classification, Sentiment NLP, Trend Scoring, TA Interpretation, Regime Detection, Strategy Bandit, Project Risk, Portfolio Optimization, Intent Classification"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "torch>=2.5.0",
    "scikit-learn>=1.6.0",
    "psycopg2-binary>=2.9.10",
    "numpy>=2.1.0",
    "pandas>=2.2.0",
    "joblib>=1.4.0",
    "transformers>=4.40.0",
    "xgboost>=2.0.0",
    "hmmlearn>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
